--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
@@ -21,6 +22,7 @@
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.22",
     "next": "^15.5.4",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
